--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,4 +26,4 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world ${{ github.event.issue.number }}!
+        run: echo Hello, world ${{ toJSON(github.event.issue) }}!
