--- a/.github/workflows/send-issue.yml
+++ b/.github/workflows/send-issue.yml
@@ -1,4 +1,4 @@
-# This is a basic workflow to help you get started with Actions
+# send issue payload (title & id) to specified webhook url
 
 name: send-issue-to-webhook
 
@@ -15,7 +15,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  send-issue:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
