--- a/dummy.env
+++ b/dummy.env
@@ -2,3 +2,7 @@ GO_ENV=development
 JWT_KEY=fuckinghell
 GITHUB_TOKEN=notgonnatell
 GOOGLE_DRIVE_KEY=stillnotgonnatell
+REDIS_HOST=localhost
+REDIS_USERNAME = musical
+REDIS_PORT = 6379
+REDIS_PASSWORD = musical_password
