move web server & queue code to seperate "server" package

--- a/dummy.env
+++ b/dummy.env
@@ -3,6 +3,6 @@ JWT_KEY=fuckinghell
 GITHUB_TOKEN=notgonnatell
 GOOGLE_DRIVE_KEY=stillnotgonnatell
 REDIS_HOST=localhost
-REDIS_USERNAME = musical
-REDIS_PORT = 6379
-REDIS_PASSWORD = musical_password
+REDIS_USERNAME=""
+REDIS_PORT=6379
+REDIS_PASSWORD=""
