download & upload queues, workers & web servers stable

--- a/dummy.env
+++ b/dummy.env
@@ -1,8 +1,9 @@
 GO_ENV=development
 JWT_KEY=fuckinghell
 GITHUB_TOKEN=notgonnatell
-GOOGLE_DRIVE_KEY=stillnotgonnatell
 REDIS_HOST=localhost
 REDIS_USERNAME=""
 REDIS_PORT=6379
 REDIS_PASSWORD=""
+GOOGLE_API_CREDENTIALS={"type":"service_account", "private_key": "stillnotgonnatell"}
+GOOGLE_DRIVE_FOLDER="fillyaown"
