--- a/.github/workflows/send-track.yml
+++ b/.github/workflows/send-track.yml
@@ -10,14 +10,17 @@ jobs:
   track_added:
     runs-on: ubuntu-latest
     steps:
-      - name: send track
-      - uses: fjogeleit/http-request-action@master
-        with:
-          url: ${{ secrets.WEBHOOK_URL }}
-          method: 'POST'
-          data: '{
-               "track":  ${{ github.event.comment.body }}
-              }'
-          bearerToken: ${{ secrets.TOKEN }}
-          ignoreStatusCodes: 'false'
-        run: echo enqueued ${{ github.event.comment.body }} !
+    - name: send track
+      uses: fjogeleit/http-request-action@master
+      with:
+        url: ${{ secrets.WEBHOOK_URL }}
+        method: 'POST'
+        data: '{
+              "track":  "${{ github.event.comment.body }}"
+            }'
+        customHeaders: '{
+              "Authorization":  ${{ secrets.TOKEN }}
+            }'
+        ignoreStatusCodes: 'false'
+    - name: done
+      run:  echo enqueued ${{ github.event.comment.body }}!
