get google drive folder from env

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       REDIS_PASSWORD: ${REDIS_PASSWORD}
       JWT_KEY: ${JWT_KEY}
       GOOGLE_API_CREDENTIALS: ${GOOGLE_API_CREDENTIALS}
-      GOOGLE_DRIVE_FOLDER: 1bDULAakbAaW-gkGQP9C24pnj7xkq7RIk
+      GOOGLE_DRIVE_FOLDER: ${GOOGLE_DRIVE_FOLDER}
     networks:
       - server
 
