--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,8 @@ services:
   redis:
     image: "redis:alpine" 
     restart: unless-stopped
+    ports:
+      - "6379:6379"
     networks:
       - server
 
